# auto-reap

./: .gitignore  LICENSE  PRD_Automated_REAP_Pipeline.md  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: example-sweep.yaml
configs/domain-packs/: coding-agent.yaml  cpa-firm.yaml  general-assistant.yaml
docs/: ACTION_PLAN.md  ARCHITECTURE.md  DOMAIN_PACKS.md  QUICKSTART.md  REMOTE_GPU.md  RESEARCH_BRIEF.md  TRACEABILITY.md
docs/assets/: make_assets.py
src/reaplab/: __init__.py
tests/: conftest.py
tests/cli/: test_cli_commands.py  test_doctor_license.py
tests/core/: test_claude_cli_provider.py  test_config.py  test_hashing.py  test_jsonl.py  test_providers.py  test_state.py
tests/datagen/: conftest.py  test_audit.py  test_dedup.py  test_packs.py  test_pipeline.py  test_planning.py  test_procedural.py  test_provider_path.py
tests/e2e/: test_demo_pipeline.py
tests/evalharness/: conftest.py  test_evaluate.py  test_judge.py  test_llama_server_runner.py  test_mock_runner.py  test_openai_runner.py  test_perf.py  test_scorer_exact.py  test_scorer_json_schema.py  test_scorer_refusal.py  test_scorer_tool_call.py
tests/orchestrate/: conftest.py  test_orchestrate_build_time.py  test_orchestrate_promote.py  test_orchestrate_report.py  test_orchestrate_rerender.py  test_orchestrate_scoring.py  test_orchestrate_status.py  test_orchestrate_sweep.py
tests/prune/: conftest.py  helpers.py  test_baseline.py  test_gguf.py  test_local_offload.py  test_profiles_mock.py  test_reap_cmd.py  test_remote.py  test_runner.py  test_tool_versions.py
(+50 files in other folders)
