[project]
name = "reap-lab"
version = "0.1.0"
description = "Prune any Mixture-of-Experts model to fit your GPU: domain-tuned calibration, REAP expert pruning, GGUF evaluation, ranked reports — one command."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Valentino Rivera" }]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rapidfuzz>=3.9",
    "jsonschema>=4.21",
    "psutil>=5.9",
]

[project.optional-dependencies]
hf = ["huggingface_hub>=0.23"]

[project.scripts]
reap-lab = "reaplab.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reaplab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: line length is advisory; UP042: str-Enums stay str+Enum for pydantic/JSON ergonomics
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
# typer's documented idiom is function calls (typer.Option/Argument) in defaults
"src/reaplab/cli/*" = ["B008"]
